deploy: QuantumPL/site@69b257067f4aaad2bc01795ce04e9af4ea99c103

--- a/publication-type/0/index.html
+++ b/publication-type/0/index.html
@@ -129,6 +129,12 @@ Quantum assembly languages are machine-independent languages that traditionally 
 </div>
 </div>
 <div>
+<h2><a href=/bib/publication/Feng2021/>Quantum Hoare logic with classical variables</a></h2>
+<div class=article-style>
+Hoare logic provides a syntax-oriented method to reason about program correctness and has been proven effective in the verification of classical and probabilistic programs. Existing proposals for quantum Hoare logic either lack completeness or …
+</div>
+</div>
+<div>
 <h2><a href=/bib/publication/Vandewetering2020/>ZX-calculus for the working quantum computer scientist</a></h2>
 <div class=article-style>
 The ZX-calculus is a graphical language for reasoning about quantum computation that has recently seen an increased usage in a variety of areas such as quantum circuit optimisation, surface codes and lattice surgery, measurement-based quantum …
