--- a/publication-type/2/index.html
+++ b/publication-type/2/index.html
@@ -165,6 +165,12 @@ We present a logic for reasoning about pairs of interactive quantum programs -- 
 </div>
 </div>
 <div>
+<h2><a href=/bib/publication/ArdeshirLarijani2018/>Automated Equivalence Checking of Concurrent Quantum Systems</a></h2>
+<div class=article-style>
+The novel field of quantum computation and quantum information has gathered significant momentum in the last few years. It has the potential to radically impact the future of information technology and influence the development of modern society. The …
+</div>
+</div>
+<div>
 <h2><a href=/bib/publication/Steiger2018/>ProjectQ: An Open Source Software Framework for Quantum Computing</a></h2>
 <div class=article-style>
 We introduce ProjectQ, an open source software effort for quantum computing. The first release features a compiler framework capable of targeting various types of hardware, a high-performance simulator with emulation capabilities, and compiler …
