--- a/publication/Coecke2011/index.html
+++ b/publication/Coecke2011/index.html
@@ -147,7 +147,8 @@ Journal article
 </div>
 <div class="d-md-none space-below"></div>
 <div class=space-below></div>
-<div class=article-style></div>
+<div class=article-style><p>Corrects several errors in and supersedes the earlier ICALP 2008 conference paper.</p>
+</div>
 </div>
 </div>
 </div>
