--- a/publication/index.html
+++ b/publication/index.html
@@ -598,8 +598,39 @@ Cite
 <a class="btn btn-outline-primary btn-page-header btn-sm" href=https://doi.org/10.1007/s10817-020-09584-7 target=_blank rel=noopener>
 DOI
 </a>
-<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://github.com/AnthonyBordg/Isabelle_marries_Dirac target=_blank rel=noopener>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://www.isa-afp.org/entries/Isabelle_Marries_Dirac.html target=_blank rel=noopener>
 URL
+</a>
+</div>
+</div>
+<div class=ml-3>
+</div>
+</div>
+</div>
+<div class="grid-sizer col-lg-12 isotope-item pubtype-0 year-2021">
+<div class="media stream-item">
+<div class=media-body>
+<div class="section-subheading article-title mb-0 mt-0">
+<a href=/bib/publication/Feng2021/>Quantum Hoare logic with classical variables</a>
+</div>
+<a href=/bib/publication/Feng2021/ class=summary-link>
+<div class=article-style>
+Hoare logic provides a syntax-oriented method to reason about program correctness and has been proven effective in the verification of …
+</div>
+</a>
+<div class="stream-meta article-metadata">
+<div>
+<span>
+<a href=/bib/author/Yuan-Feng/>Yuan Feng</a></span>, <span>
+<a href=/bib/author/Mingsheng-Ying/>Mingsheng Ying</a></span>
+</div>
+</div>
+<div class=btn-links>
+<a href=# class="btn btn-outline-primary btn-page-header btn-sm js-cite-modal" data-filename=/bib/publication/Feng2021/cite.bib>
+Cite
+</a>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://arxiv.org/abs/2008.06812 target=_blank rel=noopener>
+arXiv
 </a>
 </div>
 </div>
@@ -1849,6 +1880,41 @@ The field of quantum mechanics predates computer science by at least ten years, 
 Cite
 </a>
 <a class="btn btn-outline-primary btn-page-header btn-sm" href=https://repository.upenn.edu/edissertations/3175 target=_blank rel=noopener>
+URL
+</a>
+</div>
+</div>
+<div class=ml-3>
+</div>
+</div>
+</div>
+<div class="grid-sizer col-lg-12 isotope-item pubtype-2 year-2018">
+<div class="media stream-item">
+<div class=media-body>
+<div class="section-subheading article-title mb-0 mt-0">
+<a href=/bib/publication/ArdeshirLarijani2018/>Automated Equivalence Checking of Concurrent Quantum Systems</a>
+</div>
+<a href=/bib/publication/ArdeshirLarijani2018/ class=summary-link>
+<div class=article-style>
+The novel field of quantum computation and quantum information has gathered significant momentum in the last few years. It has the …
+</div>
+</a>
+<div class="stream-meta article-metadata">
+<div>
+<span>
+<a href=/bib/author/Ebrahim-Ardeshir-Larijani/>Ebrahim Ardeshir-Larijani</a></span>, <span>
+<a href=/bib/author/Simon-J.-Gay/>Simon J. Gay</a></span>, <span>
+<a href=/bib/author/Rajagopal-Nagarajan/>Rajagopal Nagarajan</a></span>
+</div>
+</div>
+<div class=btn-links>
+<a href=# class="btn btn-outline-primary btn-page-header btn-sm js-cite-modal" data-filename=/bib/publication/ArdeshirLarijani2018/cite.bib>
+Cite
+</a>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://doi.org/10.1145/3231597 target=_blank rel=noopener>
+DOI
+</a>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href=http://eprints.gla.ac.uk/166295/ target=_blank rel=noopener>
 URL
 </a>
 </div>
