--- a/publication/Bordg2021/index.html
+++ b/publication/Bordg2021/index.html
@@ -116,7 +116,7 @@ Cite
 <a class="btn btn-outline-primary btn-page-header" href=https://doi.org/10.1007/s10817-020-09584-7 target=_blank rel=noopener>
 DOI
 </a>
-<a class="btn btn-outline-primary btn-page-header" href=https://github.com/AnthonyBordg/Isabelle_marries_Dirac target=_blank rel=noopener>
+<a class="btn btn-outline-primary btn-page-header" href=https://www.isa-afp.org/entries/Isabelle_Marries_Dirac.html target=_blank rel=noopener>
 URL
 </a>
 </div>
