deploy: QuantumPL/site@f297f19da5200526d2835a1656b68177e2fe184e

--- a/publication/JavadiAbhari2012/index.html
+++ b/publication/JavadiAbhari2012/index.html
@@ -106,7 +106,7 @@
 <a href=/bib/author/Mohammad-Javad-Dousti/>Mohammad Javad Dousti</a></span>, <span>
 <a href=/bib/author/Lukas-Svec/>Lukas Svec</a></span>, <span>
 <a href=/bib/author/Oana-Catu/>Oana Catu</a></span>, <span>
-<a href=/bib/author/Amlan-Chakrabati/>Amlan Chakrabati</a></span>, <span>
+<a href=/bib/author/Amlan-Chakrabarti/>Amlan Chakrabarti</a></span>, <span>
 <a href=/bib/author/Chen-Fu-Chiang/>Chen-Fu Chiang</a></span>, <span>
 <a href=/bib/author/Seth-Vanderwilt/>Seth Vanderwilt</a></span>, <span>
 <a href=/bib/author/John-Black/>John Black</a></span>, <span>
