deploy: QuantumPL/site@bcf0a5f0718dcf1ddb9921a9f7dcdad6174c9f75

--- a/publication/Green2010/index.html
+++ b/publication/Green2010/index.html
@@ -151,10 +151,10 @@ Thesis
 <h3>Related</h3>
 <ul>
 <li><a href=/bib/publication/Ying2021a/>A Proof System for Disjoint Parallel Quantum Programs</a></li>
+<li><a href=/bib/publication/Li2020/>Projection-Based Runtime Assertions for Testing and Debugging Quantum Programs</a></li>
 <li><a href=/bib/publication/Li2017/>Algorithmic Analysis of Termination Problems for Quantum Programs</a></li>
 <li><a href=/bib/publication/Chareton2021/>An Automated Deductive Verification Framework for Circuit-Building Quantum Programs</a></li>
 <li><a href=/bib/publication/Jia2021/>Semantics for Variational Quantum Programming</a></li>
-<li><a href=/bib/publication/Yu2021/>Quantum Abstract Interpretation</a></li>
 </ul>
 </div>
 </div>
