--- a/publication/Hietala2021/index.html
+++ b/publication/Hietala2021/index.html
@@ -153,7 +153,8 @@ Journal article
 </div>
 <div class="d-md-none space-below"></div>
 <div class=space-below></div>
-<div class=article-style></div>
+<div class=article-style><p>POPL &lsquo;21</p>
+</div>
 <div class=article-tags>
 <a class="badge badge-light" href=/bib/tag/Programming-Languages/>Programming Languages</a>
 <a class="badge badge-light" href=/bib/tag/Formal-verification/>Formal verification</a>
