--- a/publication/Li2017/index.html
+++ b/publication/Li2017/index.html
@@ -147,7 +147,8 @@ Journal article
 </div>
 <div class="d-md-none space-below"></div>
 <div class=space-below></div>
-<div class=article-style></div>
+<div class=article-style><p>POPL &lsquo;17</p>
+</div>
 <div class=article-tags>
 <a class="badge badge-light" href=/bib/tag/SDP-Semi-Definite-Programming/>SDP (Semi-Definite Programming)</a>
 <a class="badge badge-light" href=/bib/tag/quantum-Bernoulli-factory/>quantum Bernoulli factory</a>
@@ -161,10 +162,10 @@ Journal article
 <h3>Related</h3>
 <ul>
 <li><a href=/bib/publication/Ying2021a/>A Proof System for Disjoint Parallel Quantum Programs</a></li>
+<li><a href=/bib/publication/Li2020/>Projection-Based Runtime Assertions for Testing and Debugging Quantum Programs</a></li>
 <li><a href=/bib/publication/Green2010/>Towards a Formally Verified Functional Quantum Programming Language</a></li>
 <li><a href=/bib/publication/Chareton2021/>An Automated Deductive Verification Framework for Circuit-Building Quantum Programs</a></li>
 <li><a href=/bib/publication/Jia2021/>Semantics for Variational Quantum Programming</a></li>
-<li><a href=/bib/publication/Yu2021/>Quantum Abstract Interpretation</a></li>
 </ul>
 </div>
 </div>
