--- a/publication/Li2020/index.html
+++ b/publication/Li2020/index.html
@@ -151,7 +151,24 @@ Journal article
 </div>
 <div class="d-md-none space-below"></div>
 <div class=space-below></div>
-<div class=article-style></div>
+<div class=article-style><p>OOPSLA &lsquo;20</p>
+</div>
+<div class=article-tags>
+<a class="badge badge-light" href=/bib/tag/assertion/>assertion</a>
+<a class="badge badge-light" href=/bib/tag/Quantum-computing/>Quantum computing</a>
+<a class="badge badge-light" href=/bib/tag/program-testing/>program testing</a>
+<a class="badge badge-light" href=/bib/tag/quantum-programming/>quantum programming</a>
+</div>
+<div class="article-widget content-widget-hr">
+<h3>Related</h3>
+<ul>
+<li><a href=/bib/publication/Ying2021a/>A Proof System for Disjoint Parallel Quantum Programs</a></li>
+<li><a href=/bib/publication/Amy2019b/>Sized Types for Low-Level Quantum Metaprogramming</a></li>
+<li><a href=/bib/publication/Amy2019a/>Formal Methods in Quantum Circuit Design</a></li>
+<li><a href=/bib/publication/Ying2021/>Model Checking Quantum Systems: Principles and Algorithms</a></li>
+<li><a href=/bib/publication/Singhal2020/>Verified translation between low-level quantum languages</a></li>
+</ul>
+</div>
 </div>
 </div>
 </div>
