--- a/publication/index.html
+++ b/publication/index.html
@@ -3923,7 +3923,7 @@ We develop a notion of predicate transformer and, in particular, the weakest pre
 <div class="stream-meta article-metadata">
 <div>
 <span>
-<a href=/bib/author/Ellie-Dhondt/>Ellie D'hondt</a></span>, <span>
+<a href=/bib/author/Ellie-DHondt/>Ellie D'Hondt</a></span>, <span>
 <a href=/bib/author/Prakash-Panangaden/>Prakash Panangaden</a></span>
 </div>
 </div>
