--- a/index.html
+++ b/index.html
@@ -288,14 +288,14 @@ So I decided to move the GitHub repo to its own organization and set up this Hug
 </div>
 <div class="col-12 col-lg-8">
 <div class=tag-cloud>
-<a href=/bib/tag/Formal-verification/ style=font-size:1.1185065233535711rem>Formal verification</a>
+<a href=/bib/tag/Formal-verification/ style=font-size:1.0577208135885852rem>Formal verification</a>
 <a href=/bib/tag/OpenQASM/ style=font-size:.7rem>OpenQASM</a>
-<a href=/bib/tag/Programming-Languages/ style=font-size:1.7495613986748855rem>Programming Languages</a>
+<a href=/bib/tag/Programming-Languages/ style=font-size:1.5971185310006708rem>Programming Languages</a>
 <a href=/bib/tag/QASM/ style=font-size:.7rem>QASM</a>
-<a href=/bib/tag/Quantum-Computation/ style=font-size:1.4604512509375032rem>Quantum Computation</a>
-<a href=/bib/tag/Quantum-computing/ style=font-size:1.7495613986748855rem>Quantum computing</a>
-<a href=/bib/tag/Quantum-computing/ style=font-size:1.4604512509375032rem>Quantum computing</a>
-<a href=/bib/tag/quantum-programming/ style=font-size:.7rem>quantum programming</a>
+<a href=/bib/tag/Quantum-Computation/ style=font-size:1.3499999999999999rem>Quantum Computation</a>
+<a href=/bib/tag/Quantum-computing/ style=font-size:1.3499999999999999rem>Quantum computing</a>
+<a href=/bib/tag/Quantum-computing/ style=font-size:1.8111823393784452rem>Quantum computing</a>
+<a href=/bib/tag/quantum-programming/ style=font-size:1.0577208135885852rem>quantum programming</a>
 </div>
 </div>
 </div>
