--- a/publication/Chareton2021/index.html
+++ b/publication/Chareton2021/index.html
@@ -162,9 +162,9 @@ Conference paper
 <ul>
 <li><a href=/bib/publication/Ying2021a/>A Proof System for Disjoint Parallel Quantum Programs</a></li>
 <li><a href=/bib/publication/Amy2019a/>Formal Methods in Quantum Circuit Design</a></li>
+<li><a href=/bib/publication/Li2020/>Projection-Based Runtime Assertions for Testing and Debugging Quantum Programs</a></li>
 <li><a href=/bib/publication/Li2017/>Algorithmic Analysis of Termination Problems for Quantum Programs</a></li>
 <li><a href=/bib/publication/Green2010/>Towards a Formally Verified Functional Quantum Programming Language</a></li>
-<li><a href=/bib/publication/Jia2021/>Semantics for Variational Quantum Programming</a></li>
 </ul>
 </div>
 </div>
