--- a/publication/Unruh2019/index.html
+++ b/publication/Unruh2019/index.html
@@ -146,7 +146,23 @@ Journal article
 </div>
 <div class="d-md-none space-below"></div>
 <div class=space-below></div>
-<div class=article-style></div>
+<div class=article-style><p>POPL &lsquo;19</p>
+</div>
+<div class=article-tags>
+<a class="badge badge-light" href=/bib/tag/Formal-verification/>Formal verification</a>
+<a class="badge badge-light" href=/bib/tag/Quantum-cryptography/>Quantum cryptography</a>
+<a class="badge badge-light" href=/bib/tag/Hoare-logics/>Hoare logics</a>
+</div>
+<div class="article-widget content-widget-hr">
+<h3>Related</h3>
+<ul>
+<li><a href=/bib/publication/Amy2019a/>Formal Methods in Quantum Circuit Design</a></li>
+<li><a href=/bib/publication/Singhal2020/>Verified translation between low-level quantum languages</a></li>
+<li><a href=/bib/publication/Hietala2021a/>Proving Quantum Programs Correct</a></li>
+<li><a href=/bib/publication/Hietala2021/>A Verified Optimizer for Quantum Circuits</a></li>
+<li><a href=/bib/publication/Singhal2020b/>Quantum Hoare Type Theory</a></li>
+</ul>
+</div>
 </div>
 </div>
 </div>
