deploy: QuantumPL/site@92e6a6f84d6c658097c3284090c29a593a1928c3

--- a/404.html
+++ b/404.html
@@ -100,6 +100,7 @@
 <p>Perhaps you were looking for one of these?</p>
 <h2>Latest</h2>
 <ul>
+<li><a href=/bib/publication/Heunen2022/>Quantum Information Effects</a></li>
 <li><a href=/bib/publication/>Publications</a></li>
 <li><a href=/bib/publication/Ying2021a/>A Proof System for Disjoint Parallel Quantum Programs</a></li>
 <li><a href=/bib/publication/Lewis2021/>Formal Verification of Quantum Programs: Theory, Tools and Challenges</a></li>
@@ -109,7 +110,6 @@
 <li><a href=/bib/publication/Rios2021/>On a Categorically Sound Quantum Programming Language for Circuit Description</a></li>
 <li><a href=/bib/publication/Chardonnet2021/>Geometry of Interaction for ZX-Diagrams</a></li>
 <li><a href=/bib/post/>Latest News</a></li>
-<li><a href=/bib/post/gh-org-ui/>GitHub Org and Better UI</a></li>
 </ul>
 </div>
 </div>
