--- a/publication/Chardonnet2021/index.html
+++ b/publication/Chardonnet2021/index.html
@@ -162,8 +162,8 @@ Conference paper
 <li><a href=/bib/publication/Selinger2004/>A Brief Survey of Quantum Programming Languages</a></li>
 <li><a href=/bib/publication/Hasuo2017/>Semantics of higher-order quantum computation via geometry of interaction</a></li>
 <li><a href=/bib/publication/DalLago2017/>The Geometry of Parallelism: Classical, Probabilistic, and Quantum Effects</a></li>
+<li><a href=/bib/publication/Heunen2022/>Quantum Information Effects</a></li>
 <li><a href=/bib/publication/Ying2012/>Floyd--Hoare Logic for Quantum Programs</a></li>
-<li><a href=/bib/publication/Green2013a/>An Introduction to Quantum Programming in Quipper</a></li>
 </ul>
 </div>
 </div>
