--- a/publication/Green2013a/index.html
+++ b/publication/Green2013a/index.html
@@ -166,7 +166,7 @@ Conference paper
 <li><a href=/bib/publication/Singhal2020b/>Quantum Hoare Type Theory</a></li>
 <li><a href=/bib/publication/Zhou2019/>An Applied Quantum Hoare Logic</a></li>
 <li><a href=/bib/publication/Hasuo2017/>Semantics of higher-order quantum computation via geometry of interaction</a></li>
-<li><a href=/bib/publication/Ying2012/>Floyd--Hoare Logic for Quantum Programs</a></li>
+<li><a href=/bib/publication/Heunen2022/>Quantum Information Effects</a></li>
 </ul>
 </div>
 </div>
