--- a/publication/Selinger2004/index.html
+++ b/publication/Selinger2004/index.html
@@ -164,7 +164,7 @@ Conference paper
 <li><a href=/bib/publication/Hasuo2017/>Semantics of higher-order quantum computation via geometry of interaction</a></li>
 <li><a href=/bib/publication/DalLago2017/>The Geometry of Parallelism: Classical, Probabilistic, and Quantum Effects</a></li>
 <li><a href=/bib/publication/Vizzotto2009/>Reasoning about General Quantum Programs over Mixed States</a></li>
-<li><a href=/bib/publication/Ying2012/>Floyd--Hoare Logic for Quantum Programs</a></li>
+<li><a href=/bib/publication/Heunen2022/>Quantum Information Effects</a></li>
 </ul>
 </div>
 </div>
