--- a/publication/Vizzotto2009/index.html
+++ b/publication/Vizzotto2009/index.html
@@ -160,10 +160,10 @@ Conference paper
 <h3>Related</h3>
 <ul>
 <li><a href=/bib/publication/Selinger2004/>A Brief Survey of Quantum Programming Languages</a></li>
+<li><a href=/bib/publication/Heunen2022/>Quantum Information Effects</a></li>
 <li><a href=/bib/publication/Ying2012/>Floyd--Hoare Logic for Quantum Programs</a></li>
 <li><a href=/bib/publication/Paolini2017/>qPCF: A Language for Quantum Circuit Computations</a></li>
 <li><a href=/bib/publication/Green2013a/>An Introduction to Quantum Programming in Quipper</a></li>
-<li><a href=/bib/publication/Chardonnet2021/>Geometry of Interaction for ZX-Diagrams</a></li>
 </ul>
 </div>
 </div>
