--- a/publication/Zhou2019/index.html
+++ b/publication/Zhou2019/index.html
@@ -167,7 +167,7 @@ Conference paper
 <li><a href=/bib/publication/Singhal2021/>Toward a Type-Theoretic Interpretation of Q# and Statically Enforcing the No-Cloning Theorem</a></li>
 <li><a href=/bib/publication/Singhal2020b/>Quantum Hoare Type Theory</a></li>
 <li><a href=/bib/publication/Hasuo2017/>Semantics of higher-order quantum computation via geometry of interaction</a></li>
-<li><a href=/bib/publication/Ying2012/>Floyd--Hoare Logic for Quantum Programs</a></li>
+<li><a href=/bib/publication/Heunen2022/>Quantum Information Effects</a></li>
 </ul>
 </div>
 </div>
