deploy: QuantumPL/site@ad6f6e5dea92750c618cc32d30fd424e164134e4

--- a/publication/index.html
+++ b/publication/index.html
@@ -1372,6 +1372,37 @@ arXiv
 </div>
 </div>
 </div>
+<div class="grid-sizer col-lg-12 isotope-item pubtype-5 year-2019">
+<div class="media stream-item">
+<div class=media-body>
+<div class="section-subheading article-title mb-0 mt-0">
+<a href=/bib/publication/Heunen2019/>Categories for Quantum Theory: An Introduction</a>
+</div>
+<a href=/bib/publication/Heunen2019/ class=summary-link>
+<div class=article-style>
+Monoidal category theory serves as a powerful framework for describing logical aspects of quantum theory, giving an abstract language …
+</div>
+</a>
+<div class="stream-meta article-metadata">
+<div>
+<span>
+<a href=/bib/author/Chris-Heunen/>Chris Heunen</a></span>, <span>
+<a href=/bib/author/Jamie-Vicary/>Jamie Vicary</a></span>
+</div>
+</div>
+<div class=btn-links>
+<a href=# class="btn btn-outline-primary btn-page-header btn-sm js-cite-modal" data-filename=/bib/publication/Heunen2019/cite.bib>
+Cite
+</a>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://doi.org/10.1093/oso/9780198739623.001.0001 target=_blank rel=noopener>
+DOI
+</a>
+</div>
+</div>
+<div class=ml-3>
+</div>
+</div>
+</div>
 <div class="grid-sizer col-lg-12 isotope-item pubtype-1 year-2019">
 <div class="media stream-item">
 <div class=media-body>
