--- a/publication/Heunen2022/index.html
+++ b/publication/Heunen2022/index.html
@@ -118,6 +118,9 @@ DOI
 <a class="btn btn-outline-primary btn-page-header" href=https://arxiv.org/abs/2107.12144 target=_blank rel=noopener>
 arXiv
 </a>
+<a class="btn btn-outline-primary btn-page-header" href=https://github.com/rkaarsgaard/upi target=_blank rel=noopener>
+URL
+</a>
 </div>
 </div>
 <div class=article-container>
