--- a/publication/index.html
+++ b/publication/index.html
@@ -198,6 +198,9 @@ DOI
 <a class="btn btn-outline-primary btn-page-header btn-sm" href=https://arxiv.org/abs/2107.12144 target=_blank rel=noopener>
 arXiv
 </a>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://github.com/rkaarsgaard/upi target=_blank rel=noopener>
+URL
+</a>
 </div>
 </div>
 <div class=ml-3>
