--- a/publication-type/7/index.html
+++ b/publication-type/7/index.html
@@ -113,7 +113,7 @@ The aim of this thesis is to identify practical applications where quantum compu
 <div>
 <h2><a href=/bib/publication/Singhal2020b/>Quantum Hoare Type Theory</a></h2>
 <div class=article-style>
-As quantum computers become real, it is high time we come up with effective techniques that help programmers write correct quantum programs. Inspired by Hoare Type Theory in classical computing, we propose Quantum Hoare Type Theory (QHTT) in which …
+As quantum computers become real, it is high time we come up with effective techniques that help programmers write correct quantum programs. Inspired by Hoare Type Theory in classical computing, we propose Quantum Hoare Type Theory (QHTT), in which …
 </div>
 </div>
 <div>
