deploy: QuantumPL/site@05c3d634b68d9e7f363caf3d82c61c388f0eae24

--- a/404.html
+++ b/404.html
@@ -102,7 +102,7 @@
 <ul>
 <li><a href=/bib/publication/Heunen2022/>Quantum Information Effects</a></li>
 <li><a href=/bib/publication/>Publications</a></li>
-<li><a href=/bib/publication/Ying2021a/>A Proof System for Disjoint Parallel Quantum Programs</a></li>
+<li><a href=/bib/publication/Ying2021a/>A proof system for disjoint parallel quantum programs</a></li>
 <li><a href=/bib/publication/Lewis2021/>Formal Verification of Quantum Programs: Theory, Tools and Challenges</a></li>
 <li><a href=/bib/publication/Lee2021/>Concrete Categorical Model of a Quantum Circuit Description Language with Measurement</a></li>
 <li><a href=/bib/about/>About</a></li>
