--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@ URL
 <a href=/bib/author/Yuan-Feng/>Yuan Feng</a></span>
 </span>
 (2021).
-<a href=/bib/publication/Ying2021a/>A Proof System for Disjoint Parallel Quantum Programs</a>.
+<a href=/bib/publication/Ying2021a/>A proof system for disjoint parallel quantum programs</a>.
 <em>Theoretical Computer Science</em>.
 <p>
 <a href=# class="btn btn-outline-primary btn-page-header btn-sm js-cite-modal" data-filename=/bib/publication/Ying2021a/cite.bib>
