--- a/publication/Amy2019b/index.html
+++ b/publication/Amy2019b/index.html
@@ -163,7 +163,7 @@ Conference paper
 <li><a href=/bib/publication/Singhal2020/>Verified translation between low-level quantum languages</a></li>
 <li><a href=/bib/publication/Cross2017/>Open Quantum Assembly Language</a></li>
 <li><a href=/bib/publication/Cross2021/>OpenQASM 3: A broader and deeper quantum assembly language</a></li>
-<li><a href=/bib/publication/Ying2021a/>A Proof System for Disjoint Parallel Quantum Programs</a></li>
+<li><a href=/bib/publication/Ying2021a/>A proof system for disjoint parallel quantum programs</a></li>
 <li><a href=/bib/publication/Pechoux2020/>Quantum Programming with Inductive Datatypes: Causality and Affine Type Theory</a></li>
 </ul>
 </div>
