--- a/publication/index.html
+++ b/publication/index.html
@@ -211,7 +211,7 @@ URL
 <div class="media stream-item">
 <div class=media-body>
 <div class="section-subheading article-title mb-0 mt-0">
-<a href=/bib/publication/Ying2021a/>A Proof System for Disjoint Parallel Quantum Programs</a>
+<a href=/bib/publication/Ying2021a/>A proof system for disjoint parallel quantum programs</a>
 </div>
 <a href=/bib/publication/Ying2021a/ class=summary-link>
 <div class=article-style>
