deploy: QuantumPL/site@6b4a4e76554489cabbb76bb137d8544c71b41f02

--- a/publication-type/0/index.html
+++ b/publication-type/0/index.html
@@ -161,7 +161,7 @@ QHLProver-AFP, formal proof development in Isabelle, supplement to [Liu2019]
 <div>
 <h2><a href=/bib/publication/Mosca2019/>Quantum Programming Languages (Dagstuhl Seminar 18381)</a></h2>
 <div class=article-style>
-This report documents the program and the outcomes of Dagstuhl Seminar 18381 \"Quantum Programming Languages\", which brought together researchers from quantum computing and classical programming languages.
+This report documents the program and the outcomes of Dagstuhl Seminar 18381 "Quantum Programming Languages", which brought together researchers from quantum computing and classical programming languages.
 </div>
 </div>
 <div>
