--- a/publication-type/1/index.html
+++ b/publication-type/1/index.html
@@ -197,7 +197,7 @@ We derive a variant of quantum Hoare logic (QHL), called applied quantum Hoare l
 <div>
 <h2><a href=/bib/publication/Unruh2019a/>Quantum Hoare Logic with Ghost Variables</a></h2>
 <div class=article-style>
-Quantum Hoare logic allows us to reason about quantum programs. We present an extension of quantum Hoare logic that introduces \"ghost variables\" to extend the expressive power of pre-/postconditions. Ghost variables are variables that do not …
+Quantum Hoare logic allows us to reason about quantum programs. We present an extension of quantum Hoare logic that introduces "ghost variables" to extend the expressive power of pre-/postconditions. Ghost variables are variables that do not actually …
 </div>
 </div>
 <div>
@@ -269,7 +269,7 @@ We describe an embedding of the QWIRE quantum circuit language in the Coq proof 
 <div>
 <h2><a href=/bib/publication/Paolini2017/>qPCF: A Language for Quantum Circuit Computations</a></h2>
 <div class=article-style>
-We propose qPCF, a functional language able to define and manipulate quantum circuits in an easy and intuitive way. qPCF follows the tradition of \"quantum data & classical control\" languages, inspired to the QRAM model. Ideally, qPCF computes …
+We propose qPCF, a functional language able to define and manipulate quantum circuits in an easy and intuitive way. qPCF follows the tradition of "quantum data & classical control" languages, inspired to the QRAM model. Ideally, qPCF computes finite …
 </div>
 </div>
 <div>
@@ -281,7 +281,7 @@ Program invariant is a fundamental notion widely used in program verification an
 <div>
 <h2><a href=/bib/publication/Paykin2017/>QWIRE: A Core Language for Quantum Circuits</a></h2>
 <div class=article-style>
-This paper introduces QWIRE (\"choir\"), a language for defining quantum circuits and an interface for manipulating them inside of an arbitrary classical host language. QWIRE is minimal---it contains only a few primitives---and sound with respect to …
+This paper introduces QWIRE ("choir"), a language for defining quantum circuits and an interface for manipulating them inside of an arbitrary classical host language. QWIRE is minimal---it contains only a few primitives---and sound with respect to …
 </div>
 </div>
 <div>
