--- a/publication-type/4/index.html
+++ b/publication-type/4/index.html
@@ -101,7 +101,7 @@
 <div>
 <h2><a href=/bib/publication/Rand2016/>Verification Logics for Quantum Programs</a></h2>
 <div class=article-style>
-We survey the landscape of Hoare logics for quantum programs. We review three papers: \"Reasoning about imperative quantum programs\" by Chadha, Mateus and Sernadas; \"A logic for formal verification of quantum programs\" by Yoshihiko Kakutani; and …
+We survey the landscape of Hoare logics for quantum programs. We review three papers: "Reasoning about imperative quantum programs" by Chadha, Mateus and Sernadas; "A logic for formal verification of quantum programs" by Yoshihiko Kakutani; and …
 </div>
 </div>
 <div>
