--- a/publication/index.html
+++ b/publication/index.html
@@ -1649,7 +1649,7 @@ arXiv
 </div>
 <a href=/bib/publication/Mosca2019/ class=summary-link>
 <div class=article-style>
-This report documents the program and the outcomes of Dagstuhl Seminar 18381 "Quantum Programming Languages", which brought …
+This report documents the program and the outcomes of Dagstuhl Seminar 18381 &ldquo;Quantum Programming Languages&rdquo;, which brought …
 </div>
 </a>
 <div class="stream-meta article-metadata">
@@ -2567,7 +2567,7 @@ arXiv
 </div>
 <a href=/bib/publication/Paykin2017/ class=summary-link>
 <div class=article-style>
-This paper introduces QWIRE ("choir"), a language for defining quantum circuits and an interface for manipulating them inside …
+This paper introduces QWIRE (&ldquo;choir&rdquo;), a language for defining quantum circuits and an interface for manipulating them …
 </div>
 </a>
 <div class="stream-meta article-metadata">
@@ -2672,7 +2672,7 @@ URL
 </div>
 <a href=/bib/publication/Rand2016/ class=summary-link>
 <div class=article-style>
-We survey the landscape of Hoare logics for quantum programs. We review three papers: "Reasoning about imperative quantum …
+We survey the landscape of Hoare logics for quantum programs. We review three papers: &ldquo;Reasoning about imperative quantum …
 </div>
 </a>
 <div class="stream-meta article-metadata">
