deploy: QuantumPL/site@d35398f9fa98b89720dadb9e7bde0220249004b8

--- a/404.html
+++ b/404.html
@@ -106,10 +106,10 @@
 <li><a href=/bib/publication/Ying2021a/>A proof system for disjoint parallel quantum programs</a></li>
 <li><a href=/bib/publication/Lewis2021/>Formal Verification of Quantum Programs: Theory, Tools and Challenges</a></li>
 <li><a href=/bib/about/>About</a></li>
+<li><a href=/bib/publication/Singhal2021a/>Quantum Hoare Type Theory: Extended Abstract</a></li>
+<li><a href=/bib/publication/Rand2021/>Gottesman Types for Quantum Programs</a></li>
 <li><a href=/bib/publication/Chareton2021a/>Formal Methods for Quantum Programs: A Survey</a></li>
 <li><a href=/bib/publication/Rios2021/>On a Categorically Sound Quantum Programming Language for Circuit Description</a></li>
-<li><a href=/bib/publication/Chardonnet2021/>Geometry of Interaction for ZX-Diagrams</a></li>
-<li><a href=/bib/post/>Latest News</a></li>
 </ul>
 </div>
 </div>
