--- a/index.html
+++ b/index.html
@@ -224,21 +224,21 @@ arXiv
 <i class="far fa-file-alt pub-icon" aria-hidden=true></i>
 <span class="article-metadata li-cite-author">
 <span>
-<a href=/bib/author/Christophe-Chareton/>Christophe Chareton</a></span>, <span>
-<a href=/bib/author/Sebastien-Bardin/>Sébastien Bardin</a></span>, <span>
-<a href=/bib/author/Dongho-Lee/>Dongho Lee</a></span>, <span>
-<a href=/bib/author/Benoit-Valiron/>Benoît Valiron</a></span>, <span>
-<a href=/bib/author/Renaud-Vilmart/>Renaud Vilmart</a></span>, <span>
-<a href=/bib/author/Zhaowei-Xu/>Zhaowei Xu</a></span>
+<a href=/bib/author/Kartik-Singhal/>Kartik Singhal</a></span>, <span>
+<a href=/bib/author/John-Reppy/>John Reppy</a></span>
 </span>
 (2021).
-<a href=/bib/publication/Chareton2021a/>Formal Methods for Quantum Programs: A Survey</a>.
+<a href=/bib/publication/Singhal2021a/>Quantum Hoare Type Theory: Extended Abstract</a>.
+<em>Proceedings of the 17th International Conference on Quantum Physics and Logic (QPL), Paris, France, June 2&ndash;6, 2020</em>.
 <p>
-<a href=# class="btn btn-outline-primary btn-page-header btn-sm js-cite-modal" data-filename=/bib/publication/Chareton2021a/cite.bib>
+<a href=# class="btn btn-outline-primary btn-page-header btn-sm js-cite-modal" data-filename=/bib/publication/Singhal2021a/cite.bib>
 Cite
 </a>
-<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://arxiv.org/abs/2109.06493 target=_blank rel=noopener>
-arXiv
+<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://doi.org/10.4204/EPTCS.340.15 target=_blank rel=noopener>
+DOI
+</a>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://ks.cs.uchicago.edu/publication/qhtt/ target=_blank rel=noopener>
+URL
 </a>
 </p>
 </div>
