--- a/publication-type/1/index.html
+++ b/publication-type/1/index.html
@@ -105,6 +105,18 @@ In this paper, we introduce dynamic lifting to a quantum circuit-description lan
 </div>
 </div>
 <div>
+<h2><a href=/bib/publication/Rand2021/>Gottesman Types for Quantum Programs</a></h2>
+<div class=article-style>
+The Heisenberg representation of quantum operators provides a powerful technique for reasoning about quantum circuits, albeit those restricted to the common (non-universal) Clifford set H, S and CNOT. The Gottesman-Knill theorem showed that we can …
+</div>
+</div>
+<div>
+<h2><a href=/bib/publication/Singhal2021a/>Quantum Hoare Type Theory: Extended Abstract</a></h2>
+<div class=article-style>
+As quantum computers become real, it is high time we come up with effective techniques that help programmers write correct quantum programs. In classical computing, formal verification and sound static type systems prevent several classes of bugs …
+</div>
+</div>
+<div>
 <h2><a href=/bib/publication/Chardonnet2021/>Geometry of Interaction for ZX-Diagrams</a></h2>
 <div class=article-style>
 ZX-Calculus is a versatile graphical language for quantum computation equipped with an equational theory. Getting inspiration from Geometry of Interaction, in this paper we propose a token-machine-based asynchronous model of both pure ZX-Calculus and …
@@ -150,18 +162,6 @@ We introduce dependently typed Proto-Quipper, or Proto-Quipper-D for short, an e
 <h2><a href=/bib/publication/Fu2020/>Linear Dependent Type Theory for Quantum Programming Languages: Extended Abstract</a></h2>
 <div class=article-style>
 Modern quantum programming languages integrate quantum resources and classical control. They must, on the one hand, be linearly typed to reflect the no-cloning property of quantum resources. On the other hand, high-level and practical languages …
-</div>
-</div>
-<div>
-<h2><a href=/bib/publication/Rand2020/>Gottesman Types for Quantum Programs</a></h2>
-<div class=article-style>
-The Heisenberg representation of quantum operators provides a powerful technique for reasoning about quantum circuits, albeit those restricted to the common (non-universal) Clifford set H, S and CNOT. The Gottesman-Knill theorem showed that we can …
-</div>
-</div>
-<div>
-<h2><a href=/bib/publication/Singhal2020a/>Quantum Hoare Type Theory: Extended Abstract</a></h2>
-<div class=article-style>
-As quantum computers become real, it is high time we come up with effective techniques that help programmers write correct quantum programs. In classical computing, formal verification and sound static type systems prevent several classes of bugs …
 </div>
 </div>
 <div>
@@ -228,6 +228,12 @@ Common quantum algorithms make heavy use of ancillae: scratch qubits that are in
 <h2><a href=/bib/publication/Amy2019/>Towards Large-Scale Functional Verification of Universal Quantum Circuits</a></h2>
 <div class=article-style>
 We introduce a framework for the formal specification and verification of quantum circuits based on the Feynman path integral. Our formalism, built around exponential sums of polynomial functions, provides a structured and natural way of specifying …
+</div>
+</div>
+<div>
+<h2><a href=/bib/publication/Huot2019/>Universal Properties in Quantum Theory</a></h2>
+<div class=article-style>
+We argue that notions in quantum theory should have universal properties in the sense of category theory. We consider the completely positive trace preserving (CPTP) maps, the basic notion of quantum channel. Physically, quantum channels are derived …
 </div>
 </div>
 <div>
