--- a/publication/index.html
+++ b/publication/index.html
@@ -308,6 +308,76 @@ arXiv
 </div>
 </div>
 </div>
+<div class="grid-sizer col-lg-12 isotope-item pubtype-1 year-2021">
+<div class="media stream-item">
+<div class=media-body>
+<div class="section-subheading article-title mb-0 mt-0">
+<a href=/bib/publication/Singhal2021a/>Quantum Hoare Type Theory: Extended Abstract</a>
+</div>
+<a href=/bib/publication/Singhal2021a/ class=summary-link>
+<div class=article-style>
+As quantum computers become real, it is high time we come up with effective techniques that help programmers write correct quantum …
+</div>
+</a>
+<div class="stream-meta article-metadata">
+<div>
+<span>
+<a href=/bib/author/Kartik-Singhal/>Kartik Singhal</a></span>, <span>
+<a href=/bib/author/John-Reppy/>John Reppy</a></span>
+</div>
+</div>
+<div class=btn-links>
+<a href=# class="btn btn-outline-primary btn-page-header btn-sm js-cite-modal" data-filename=/bib/publication/Singhal2021a/cite.bib>
+Cite
+</a>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://doi.org/10.4204/EPTCS.340.15 target=_blank rel=noopener>
+DOI
+</a>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://ks.cs.uchicago.edu/publication/qhtt/ target=_blank rel=noopener>
+URL
+</a>
+</div>
+</div>
+<div class=ml-3>
+</div>
+</div>
+</div>
+<div class="grid-sizer col-lg-12 isotope-item pubtype-1 year-2021">
+<div class="media stream-item">
+<div class=media-body>
+<div class="section-subheading article-title mb-0 mt-0">
+<a href=/bib/publication/Rand2021/>Gottesman Types for Quantum Programs</a>
+</div>
+<a href=/bib/publication/Rand2021/ class=summary-link>
+<div class=article-style>
+The Heisenberg representation of quantum operators provides a powerful technique for reasoning about quantum circuits, albeit those …
+</div>
+</a>
+<div class="stream-meta article-metadata">
+<div>
+<span>
+<a href=/bib/author/Robert-Rand/>Robert Rand</a></span>, <span>
+<a href=/bib/author/Aarthi-Sundaram/>Aarthi Sundaram</a></span>, <span>
+<a href=/bib/author/Kartik-Singhal/>Kartik Singhal</a></span>, <span>
+<a href=/bib/author/Brad-Lackey/>Brad Lackey</a></span>
+</div>
+</div>
+<div class=btn-links>
+<a href=# class="btn btn-outline-primary btn-page-header btn-sm js-cite-modal" data-filename=/bib/publication/Rand2021/cite.bib>
+Cite
+</a>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://doi.org/10.4204/EPTCS.340.14 target=_blank rel=noopener>
+DOI
+</a>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://rand.cs.uchicago.edu/publication/rand-2020-gottesman/ target=_blank rel=noopener>
+URL
+</a>
+</div>
+</div>
+<div class=ml-3>
+</div>
+</div>
+</div>
 <div class="grid-sizer col-lg-12 isotope-item pubtype-0 year-2021">
 <div class="media stream-item">
 <div class=media-body>
@@ -864,9 +934,9 @@ URL
 <div class="media stream-item">
 <div class=media-body>
 <div class="section-subheading article-title mb-0 mt-0">
-<a href=/bib/publication/Singhal2020b/>Quantum Hoare Type Theory</a>
+<a href=/bib/publication/Singhal2020a/>Quantum Hoare Type Theory</a>
 </div>
-<a href=/bib/publication/Singhal2020b/ class=summary-link>
+<a href=/bib/publication/Singhal2020a/ class=summary-link>
 <div class=article-style>
 As quantum computers become real, it is high time we come up with effective techniques that help programmers write correct quantum …
 </div>
@@ -878,7 +948,7 @@ As quantum computers become real, it is high time we come up with effective tech
 </div>
 </div>
 <div class=btn-links>
-<a href=# class="btn btn-outline-primary btn-page-header btn-sm js-cite-modal" data-filename=/bib/publication/Singhal2020b/cite.bib>
+<a href=# class="btn btn-outline-primary btn-page-header btn-sm js-cite-modal" data-filename=/bib/publication/Singhal2020a/cite.bib>
 Cite
 </a>
 <a class="btn btn-outline-primary btn-page-header btn-sm" href=https://arxiv.org/abs/2012.02154 target=_blank rel=noopener>
@@ -1133,76 +1203,6 @@ Cite
 </a>
 <a class="btn btn-outline-primary btn-page-header btn-sm" href=https://doi.org/10.1145/3385412.3386007 target=_blank rel=noopener>
 DOI
-</a>
-</div>
-</div>
-<div class=ml-3>
-</div>
-</div>
-</div>
-<div class="grid-sizer col-lg-12 isotope-item pubtype-1 year-2020">
-<div class="media stream-item">
-<div class=media-body>
-<div class="section-subheading article-title mb-0 mt-0">
-<a href=/bib/publication/Singhal2020a/>Quantum Hoare Type Theory: Extended Abstract</a>
-</div>
-<a href=/bib/publication/Singhal2020a/ class=summary-link>
-<div class=article-style>
-As quantum computers become real, it is high time we come up with effective techniques that help programmers write correct quantum …
-</div>
-</a>
-<div class="stream-meta article-metadata">
-<div>
-<span>
-<a href=/bib/author/Kartik-Singhal/>Kartik Singhal</a></span>, <span>
-<a href=/bib/author/John-Reppy/>John Reppy</a></span>
-</div>
-</div>
-<div class=btn-links>
-<a href=# class="btn btn-outline-primary btn-page-header btn-sm js-cite-modal" data-filename=/bib/publication/Singhal2020a/cite.bib>
-Cite
-</a>
-<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://doi.org/10.4204/EPTCS.340.15 target=_blank rel=noopener>
-DOI
-</a>
-<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://ks.cs.uchicago.edu/publication/qhtt/ target=_blank rel=noopener>
-URL
-</a>
-</div>
-</div>
-<div class=ml-3>
-</div>
-</div>
-</div>
-<div class="grid-sizer col-lg-12 isotope-item pubtype-1 year-2020">
-<div class="media stream-item">
-<div class=media-body>
-<div class="section-subheading article-title mb-0 mt-0">
-<a href=/bib/publication/Rand2020/>Gottesman Types for Quantum Programs</a>
-</div>
-<a href=/bib/publication/Rand2020/ class=summary-link>
-<div class=article-style>
-The Heisenberg representation of quantum operators provides a powerful technique for reasoning about quantum circuits, albeit those …
-</div>
-</a>
-<div class="stream-meta article-metadata">
-<div>
-<span>
-<a href=/bib/author/Robert-Rand/>Robert Rand</a></span>, <span>
-<a href=/bib/author/Aarthi-Sundaram/>Aarthi Sundaram</a></span>, <span>
-<a href=/bib/author/Kartik-Singhal/>Kartik Singhal</a></span>, <span>
-<a href=/bib/author/Brad-Lackey/>Brad Lackey</a></span>
-</div>
-</div>
-<div class=btn-links>
-<a href=# class="btn btn-outline-primary btn-page-header btn-sm js-cite-modal" data-filename=/bib/publication/Rand2020/cite.bib>
-Cite
-</a>
-<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://doi.org/10.4204/EPTCS.340.14 target=_blank rel=noopener>
-DOI
-</a>
-<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://rand.cs.uchicago.edu/publication/rand-2020-gottesman/ target=_blank rel=noopener>
-URL
 </a>
 </div>
 </div>
@@ -1766,6 +1766,37 @@ Cite
 </a>
 <a class="btn btn-outline-primary btn-page-header btn-sm" href=http://hdl.handle.net/10012/14480 target=_blank rel=noopener>
 URL
+</a>
+</div>
+</div>
+<div class=ml-3>
+</div>
+</div>
+</div>
+<div class="grid-sizer col-lg-12 isotope-item pubtype-1 year-2019">
+<div class="media stream-item">
+<div class=media-body>
+<div class="section-subheading article-title mb-0 mt-0">
+<a href=/bib/publication/Huot2019/>Universal Properties in Quantum Theory</a>
+</div>
+<a href=/bib/publication/Huot2019/ class=summary-link>
+<div class=article-style>
+We argue that notions in quantum theory should have universal properties in the sense of category theory. We consider the completely …
+</div>
+</a>
+<div class="stream-meta article-metadata">
+<div>
+<span>
+<a href=/bib/author/Mathieu-Huot/>Mathieu Huot</a></span>, <span>
+<a href=/bib/author/Sam-Staton/>Sam Staton</a></span>
+</div>
+</div>
+<div class=btn-links>
+<a href=# class="btn btn-outline-primary btn-page-header btn-sm js-cite-modal" data-filename=/bib/publication/Huot2019/cite.bib>
+Cite
+</a>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://doi.org/10.4204/EPTCS.287.12 target=_blank rel=noopener>
+DOI
 </a>
 </div>
 </div>
