--- a/publication/Mosca2019/index.html
+++ b/publication/Mosca2019/index.html
@@ -152,7 +152,7 @@ URL
 <li><a href=/bib/publication/Altenkirch2005/>A Functional Quantum Programming Language</a></li>
 <li><a href=/bib/publication/Gay2005/>Communicating Quantum Processes</a></li>
 <li><a href=/bib/publication/Amy2019a/>Formal Methods in Quantum Circuit Design</a></li>
-<li><a href=/bib/publication/Ying2021/>Model Checking Quantum Systems: Principles and Algorithms</a></li>
+<li><a href=/bib/publication/Rand2021/>Gottesman Types for Quantum Programs</a></li>
 </ul>
 </div>
 </div>
