--- a/publication/Rios2021/index.html
+++ b/publication/Rios2021/index.html
@@ -152,9 +152,9 @@ Thesis
 <ul>
 <li><a href=/bib/publication/Paolini2017/>qPCF: A Language for Quantum Circuit Computations</a></li>
 <li><a href=/bib/publication/Amy2019a/>Formal Methods in Quantum Circuit Design</a></li>
+<li><a href=/bib/publication/Rand2021/>Gottesman Types for Quantum Programs</a></li>
+<li><a href=/bib/publication/Singhal2021a/>Quantum Hoare Type Theory: Extended Abstract</a></li>
 <li><a href=/bib/publication/Ying2021/>Model Checking Quantum Systems: Principles and Algorithms</a></li>
-<li><a href=/bib/publication/Svore2018/>Q#: Enabling Scalable Quantum Computing and Development with a High-Level DSL</a></li>
-<li><a href=/bib/publication/Singhal2020/>Verified translation between low-level quantum languages</a></li>
 </ul>
 </div>
 </div>
