deploy: QuantumPL/site@ad7836ae89fc917612c2c49c348298f4fd466182

--- a/404.html
+++ b/404.html
@@ -123,7 +123,7 @@
 <li><a href=/bib/publication/Heunen2022/>Quantum Information Effects</a></li>
 <li><a href=/bib/publication/>Publications</a></li>
 <li><a href=/bib/post/>Posts</a></li>
-<li><a href=/bib/post/pronunciation-guide/>A Quantum Pronunciation Guide</a></li>
+<li><a href=/bib/post/pronunciation-guide/>A Quantum PL Pronunciation Guide</a></li>
 <li><a href=/bib/post/eoy-2021-updates/>End of Year 2021 Updates</a></li>
 <li><a href=/bib/publication/Feng2021/>Quantum Hoare Logic with Classical Variables</a></li>
 <li><a href=/bib/publication/Lee2021/>Concrete Categorical Model of a Quantum Circuit Description Language with Measurement</a></li>
