--- a/index.html
+++ b/index.html
@@ -292,11 +292,11 @@ Dec 22, 2021
 </span>
 </div>
 <div class="section-subheading article-title mb-1 mt-3">
-<a href=/bib/post/pronunciation-guide/>A Quantum Pronunciation Guide</a>
+<a href=/bib/post/pronunciation-guide/>A Quantum PL Pronunciation Guide</a>
 </div>
 <a href=/bib/post/pronunciation-guide/ class=summary-link>
 <div class=article-style>
-<p>Project Name Pronounced as IQu haiku LIQ$Ui|\rangle$ liquid Nielsen and Chuang&rsquo;s Quantum Computation and Quantum Information Mike and Ike OpenQASM open chasm PLanQC plank / Planck PyQuil pie-quill PyZX pizzix (like physics) Q# Q-Sharp QASM chasm Qbricks Q-bricks / Kubrick&rsquo;s Qiskit kiss-kit AND quiss-kit1 Quil quill QWIRE choir SQIR squire t$|$ket$\rangle$ ticket VOQC vox ZX zed ex How Do You Pronounce &ldquo;Qiskit?</p>
+<p>Project Name Pronounced as IQu haiku LIQ$Ui|\rangle$ liquid OpenQASM open chasm PLanQC plank / Planck PyQuil pie-quill PyZX pizzix (like physics) Q# Q-Sharp QASM chasm Qbricks Q-bricks / Kubrick&rsquo;s Qiskit kiss-kit AND quiss-kit1 Quil quill QWIRE choir Silq silk SQIR squire t$|$ket$\rangle$ ticket VOQC vox ZX zed ex Bonus: Michael Nielsen and Isaac Chuang&rsquo;s classic textbook Quantum Computation and Quantum Information is affectionately known as Mike and Ike.</p>
 </div>
 </a>
 </div>
