--- a/publication/index.html
+++ b/publication/index.html
@@ -1089,6 +1089,36 @@ DOI
 </div>
 </div>
 </div>
+<div class="grid-sizer col-lg-12 isotope-item pubtype-0 year-2020">
+<div class="media stream-item">
+<div class=media-body>
+<div class="section-subheading article-title mb-0 mt-0">
+<a href=/bib/publication/Zhao2020/>Quantum Software Engineering: Landscapes and Horizons</a>
+</div>
+<a href=/bib/publication/Zhao2020/ class=summary-link>
+<div class=article-style>
+Quantum software plays a critical role in exploiting the full potential of quantum computing systems. As a result, it has been drawing …
+</div>
+</a>
+<div class="stream-meta article-metadata">
+<div>
+<span>
+<a href=/bib/author/Jianjun-Zhao/>Jianjun Zhao</a></span>
+</div>
+</div>
+<div class=btn-links>
+<a href=# class="btn btn-outline-primary btn-page-header btn-sm js-cite-modal" data-filename=/bib/publication/Zhao2020/cite.bib>
+Cite
+</a>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://arxiv.org/abs/2007.07047 target=_blank rel=noopener>
+arXiv
+</a>
+</div>
+</div>
+<div class=ml-3>
+</div>
+</div>
+</div>
 <div class="grid-sizer col-lg-12 isotope-item pubtype-1 year-2020">
 <div class="media stream-item">
 <div class=media-body>
